--- a/webapp/Jenkinsfile
+++ b/webapp/Jenkinsfile
@@ -30,8 +30,8 @@ pipeline {
       }
       steps {
         script {
-          withDockerRegistry([ credentialsId: "DockerHubCredentials", url: "" ]) {
-            dockerImage.push('latest')
+          docker.withRegistry('https://registry-1.docker.io/v2/', 'docker-hub-credentials') {
+            dockerImage.push()
           }
         }
       }
