--- a/webapp/Jenkinsfile
+++ b/webapp/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
       }
       steps {
         script {
-          docker.withRegistry('https://registry-1.docker.io/v2/', 'docker-hub-credentials') {
+          docker.withRegistry('https://registry-1.docker.io/v2/', 'DockerHubCredentials') {
             dockerImage.push()
           }
         }
